@@ -1,5 +1,6 @@
 0.4.1 (dev)
   BugFix: Added C.UTF-8 default language set for executeCommand function.
+  Added support to NomadBSD.
 
 0.4.0 (2024/05/23)
   BugFix: When clicking on a outdated pkg inside Output tab, do not go to the Info
